# rust-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/actions/deploy-terraform/: action.yml
.github/workflows/: checks.yml  deployment.yml  general.yml
configuration/: production.yml
deployment/: .terraform.lock.hcl  acr.tf  email-api-deployment.yml  ingress.yml  kubernetes.tf  main.tf
migrations/: 20230527144818_create_subscription_tokens_table.sql  20230529135810_rename_subscriptions_tokens.sql  20240222204516_create_users_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
